springbox-api-gateway/kubernetes/springbox-api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springbox
    component: api-gateway
  name: springbox-api-gateway
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: springbox
    component: api-gateway
  type: ClusterIP
